fixed game alignment issue (centered a div)

--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -1,7 +1,10 @@
 .game-container {
   background-color: #121213;
-  width: fit-content;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
 }
